# Object-Detection-from-Scratch---PASCAL-VOC-2012

./: .gitignore  Makefile  README.md  config.py  evaluate.py  evaluate_model.py  inference.py  logger.py  pascal_dataset.py  pyproject.toml  requirements.txt  run_pipeline.py  train.py  train_from_scratch.py  video.webm
utility/: __init__.py  coco_eval.py  coco_utils.py  engine.py
