[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "object-detection-pascalvoc"
version = "1.0.0"
description = "Object detection from scratch using Faster R-CNN on PASCAL VOC 2012"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "opencv-python>=4.8.0",
    "matplotlib>=3.7.0",
    "Pillow>=10.0.0",
    "natsort>=8.4.0",
    "pycocotools>=2.0.7",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = ["black>=23.0.0", "flake8>=6.0.0", "mypy>=1.0.0"]

[project.urls]
Repository = "https://github.com/varun
[tool.black]
line-length = 120
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
Homepage = "https://github.com/yourusername/Image-Processing-PascalVOC"
Repository = "https://github.covarun/Image-Processing-PascalVOC"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
